--- a/Workers/plugin.yml
+++ b/Workers/plugin.yml
@@ -1,7 +1,12 @@
 name: UsefulVillagers
-version: 0.2
+version: 0.2.1
 author: Some Random Gamedev
 website: http://dev.bukkit.org/server-mods/usefulvillagers/
 
 main: org.randomgd.bukkit.workers.WorkerHandler
+
+permissions:
+  jobassign:
+    description: Give access to villager interaction.
+    default: op
 
