Added blacksmith mining ability. Added a lot of permissions. Added specific configuration for mining blacksmith. Extended blacksmith scanning area.

--- a/Workers/config.yml
+++ b/Workers/config.yml
@@ -12,3 +12,9 @@ librarian:
 butcher:
   radius: 2
   shear: 3000
+blacksmith:
+  horizontalrange: 2
+  verticalbelow: 2
+  verticalabove: 2
+  miningcooldown: 2500
+  miningdepth: 32
