--- a/Workers/plugin.yml
+++ b/Workers/plugin.yml
@@ -1,13 +1,41 @@
 name: UsefulVillagers
-version: 0.3.2
+version: 0.3.3
 author: Some Random Gamedev
 website: http://dev.bukkit.org/server-mods/usefulvillagers/
 
 main: org.randomgd.bukkit.workers.WorkerHandler
 
 permissions:
-    usefulvillagers.jobassign:
+    usefulvillagers.jobassign.*:
        description: Give access to villager job selection.
+       children:
+          usefulvillagers.jobassign.farmer: true
+          usefulvillagers.jobassign.librarian: true
+          usefulvillagers.jobassign.butcher: true
+          usefulvillagers.jobassign.blacksmith: true
+          usefulvillagers.jobassign.miner: true
+          usefulvillagers.jobassign.seeder: true
+          usefulvillagers.jobassign.lumberjack: true
+    usefulvillagers.jobassign.farmer:
+       description: Give access to farmer job selection.
+       default: op
+    usefulvillagers.jobassign.librarian:
+       description: Give access to librarian job selection.
+       default: op
+    usefulvillagers.jobassign.butcher:
+       description: Give access to butcher job selection.
+       default: op
+    usefulvillagers.jobassign.blacksmith:
+       description: Give access to blacksmith job selection.
+       default: op
+    usefulvillagers.jobassign.miner:
+       description: Give access to miner (blacksmith sub-task) job selection.
+       default: op
+    usefulvillagers.jobassign.seeder:
+       description: Give access to seeder (farmer sub-task) job selection.
+       default: op
+    usefulvillagers.jobassign.lumberjack:
+       description: Give access to lumberjack (farmer sub-task) job selection.
        default: op
     usefulvillagers.give:
        description: Give access to player donation to villagers.
