--- a/Workers/plugin.yml
+++ b/Workers/plugin.yml
@@ -1,5 +1,5 @@
 name: UsefulVillagers
-version: 0.3.5
+version: 0.3.5b
 author: Some Random Gamedev
 website: http://dev.bukkit.org/server-mods/usefulvillagers/
 
