--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: UsefulVillagers
-version: 0.3.5b
+version: 0.3.5c
 author: Some Random Gamedev
 website: http://dev.bukkit.org/server-mods/usefulvillagers/
 
