--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,11 @@
             <artifactId>bukkit</artifactId>
             <version>1.3.2-R2.0</version>
         </dependency>
+        <dependency>
+        	<groupId>com.google.code.gson</groudId>
+        	<artifactId>gson</artifactId>
+        	<version>2.2.2</version>
+        	<scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
