--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
             <version>1.3.2-R2.0</version>
         </dependency>
         <dependency>
-        	<groupId>com.google.code.gson</groudId>
+        	<groupId>com.google.code.gson</groupId>
         	<artifactId>gson</artifactId>
         	<version>2.2.2</version>
         	<scope>compile</scope>
