Updated to work on Bukkit 1.6.4 R2.0

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: UsefulVillagers
-version: ${version}
+version: 0.4.1
 author: Some Random Gamedev
 website: http://dev.bukkit.org/server-mods/usefulvillagers/
 
