--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
-name: UsefulVillagers
+name: UsefulVillagersReborn
 version: 0.4.1
-author: Some Random Gamedev
+author: Some Random Gamedev, Drkmatr1984
 website: http://dev.bukkit.org/server-mods/usefulvillagers/
 
 main: org.randomgd.bukkit.workers.WorkerHandler
