--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: UsefulVillagersReborn
 version: 0.4.1
-author: Some Random Gamedev, Drkmatr1984
-website: http://dev.bukkit.org/server-mods/usefulvillagers/
+author: "Drkmatr1984, Some Random Gamedev, GUIpsp"
+website: "http://dev.bukkit.org/server-mods/usefulvillagers/"
 
 main: org.randomgd.bukkit.workers.WorkerHandler
 
